refactor: Java 25 modernization for liveness health indicator and mail service
- YLivenessHealthIndicator: pattern matching instanceof, var locals
- MailService: additional var and stream operation refinements

https://claude.ai/code/session_01Q6XzCtWk7ibKmErheFYANF